WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47450
Crash in WebCore::SocketStreamHandle::chooseProxyFromArray because proxyArray passed is nil
https://bugs.webkit.org/show_bug.cgi?id=47450
Summary
Crash in WebCore::SocketStreamHandle::chooseProxyFromArray because proxyArray...
Pratik Solanki
Reported
2010-10-08 23:38:08 PDT
Created
attachment 70344
[details]
crash log I ran into this crash when using a pac file in my network settings and then pressing the Connect button on <
http://www.websockets.org/echo.html
>
Attachments
crash log
(35.64 KB, text/plain)
2010-10-08 23:38 PDT
,
Pratik Solanki
no flags
Details
Patch
(1.39 KB, patch)
2010-10-08 23:50 PDT
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2010-10-08 23:38:37 PDT
<
rdar://problem/8244376
>
Pratik Solanki
Comment 2
2010-10-08 23:50:25 PDT
Created
attachment 70345
[details]
Patch
WebKit Commit Bot
Comment 3
2010-10-09 00:11:18 PDT
Comment on
attachment 70345
[details]
Patch Clearing flags on attachment: 70345 Committed
r69442
: <
http://trac.webkit.org/changeset/69442
>
WebKit Commit Bot
Comment 4
2010-10-09 00:11:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug