2010-10-09  Pratik Solanki  <psolanki@apple.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=47450
        Crash in WebCore::SocketStreamHandle::chooseProxyFromArray because proxyArray passed is nil
        <rdar://problem/8244376>

        * platform/network/cf/SocketStreamHandleCFNet.cpp:
        (WebCore::SocketStreamHandle::chooseProxyFromArray): If proxyArray is
        NULL, return early to avoid crash.

Canonical link: https://commits.webkit.org/60042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69442 268f45cc-cd09-0410-ab3c-d52691b4dbfc